# asr_sdm_robo

./: .clang-format  .gitignore  README.md  comm_protocol.md  extract_camera_info.py  install_matplotplusplus.sh  install_pinocchio_from_source.py  pinocchio_install_from_apt.py  setup_dev_env.sh
src/asr_sdm_launch/: CMakeLists.txt  package.xml
src/asr_sdm_launch/config/: asr_sdm_pinocchio.rviz
src/asr_sdm_launch/launch/: asr_sdm_pinocchio_rviz.launch.py  asr_sdm_teleop_launch.py  interface_launch.py  rviz_and_imu.launch.py  video_enhancement_realsense.launch.py
src/asr_sdm_msgs/asr_sdm_perception_msgs/: CMakeLists.txt  package.xml
src/asr_sdm_msgs/asr_sdm_perception_msgs/msg/: CameraMeasurement.msg  DenseInput.msg  Feature.msg  FeatureMeasurement.msg  Info.msg  NbvTrajectory.msg  TrackingInfo.msg  TrafficLightRoi.msg  TrafficLightRoiArray.msg
src/asr_sdm_sensors/asr_sdm_imu_hiwonder_10axis/: CMakeLists.txt  package.xml
src/asr_sdm_sensors/asr_sdm_imu_hiwonder_10axis/include/asr_sdm_imu_hiwonder_10axis/: imu_hiwonder_10axis.hpp
src/asr_sdm_sensors/asr_sdm_imu_hiwonder_10axis/src/: imu_hiwonder_10axis.cpp
src/asr_sdm_tools/ros2-system-monitor/: CMakeLists.txt  package.xml
src/asr_sdm_tools/ros2-system-monitor/config/: system_monitor.yaml
src/asr_sdm_tools/ros2-system-monitor/launch/: system_monitor.launch.py
src/asr_sdm_tools/ros2-system-monitor/ros2_system_monitor/: __init__.py
src/asr_sdm_universe/common/asr_sdm_geometric_vision/: CMakeLists.txt  package.xml
src/asr_sdm_universe/common/data_structure/: CMakeLists.txt  package.xml
src/asr_sdm_universe/common/eigen_checks/: CMakeLists.txt  package.xml
src/asr_sdm_universe/common/eigen_checks/test/: test_helper.h
src/asr_sdm_universe/common/fast/: CMakeLists.txt  package.xml
src/asr_sdm_universe/common/fast/src/: fast_10.cpp  fast_11.cpp  fast_12.cpp  fast_12_score.cpp  fast_7.cpp  fast_8.cpp  fast_9.cpp  fast_9_score.cpp  faster_corner_10_sse.cpp  faster_corner_9_neon.cpp
src/asr_sdm_universe/common/fast/test/: test.cpp  test_fast_11_12_validation.cpp  test_fast_7_12_validation.cpp
src/asr_sdm_universe/common/gaussian_process_regression/: CMakeLists.txt  package.xml
src/asr_sdm_universe/common/gaussian_process_regression/contrib/: libgpConfig.cmake.in
src/asr_sdm_universe/common/gaussian_process_regression/src/: gp_example_dense.cpp
src/asr_sdm_universe/common/gaussian_process_regression/tests/: test_cov_factory.cc  test_covariance_functions.cc  test_gp_regression.cc  test_gp_utils.cc  test_log_likelihood.cc  test_optimizer.cc
src/asr_sdm_universe/common/minkindr/minkindr/: CMakeLists.txt  package.xml
src/asr_sdm_universe/common/minkindr/minkindr_python/: CMakeLists.txt  package.xml  setup.cfg
src/asr_sdm_universe/control/asr_sdm_controller/: CMakeLists.txt  package.xml
src/asr_sdm_universe/control/asr_sdm_controller/src/: ahrs.cpp  asr_sdm_controller_node.cpp
src/asr_sdm_universe/control/asr_sdm_kinematic_dynamic_model/: CMakeLists.txt  README_pinocchio.md  package.xml
src/asr_sdm_universe/control/asr_sdm_kinematic_dynamic_model/launch/: dynamics_rviz.launch.py  dynamics_rviz.rviz  pinocchio_dynamics.launch.py
src/asr_sdm_universe/control/asr_sdm_kinematic_dynamic_model/src/: pinocchio_dynamics_node.cpp  underwater_dynamics.cpp
src/asr_sdm_universe/control/asr_sdm_kinematic_dynamic_model/test/: test_underwater_dynamics.cpp
src/asr_sdm_universe/map/asr_sdm_esdf_map/: CMakeLists.txt  package.xml
src/asr_sdm_universe/map/asr_sdm_esdf_map/config/: esdf_map_config.yaml
src/asr_sdm_universe/map/asr_sdm_esdf_map/launch/: esdf_map_launch.py
src/asr_sdm_universe/map/asr_sdm_esdf_map/src/: edt_environment.cpp  esdf_map.cpp  esdf_map_node.cpp  obj_generator.cpp  obj_predictor.cpp  raycast.cpp  sdf_map.cpp
src/asr_sdm_universe/perception/asr_sdm_image_classifier/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_image_classifier/config/: img_classifier.param.yaml
src/asr_sdm_universe/perception/asr_sdm_image_classifier/launch/: img_classifier.launch.py  img_classifier.launch.xml
src/asr_sdm_universe/perception/asr_sdm_image_classifier/src/: img_classifier.cpp
src/asr_sdm_universe/perception/asr_sdm_object_detector/: CMakeLists.txt  package.xml
src/asr_sdm_universe/perception/asr_sdm_object_detector/config/: img_detector.param.yaml
src/asr_sdm_universe/perception/asr_sdm_object_detector/launch/: img_detector.launch.py  img_detector.launch.xml
src/asr_sdm_universe/perception/asr_sdm_object_detector/model/: labels.txt
src/asr_sdm_universe/perception/asr_sdm_object_detector/src/: img_detector.cpp
src/asr_sdm_universe/perception/asr_sdm_underwater_video_enhancement/: CMakeLists.txt  README.md  package.xml
src/asr_sdm_universe/perception/asr_sdm_underwater_video_enhancement/config/: asr_sdm_underwater_video_enhancement.param.yaml
src/asr_sdm_universe/perception/asr_sdm_underwater_video_enhancement/launch/: asr_sdm_underwater_video_enhancement.launch.xml
src/asr_sdm_universe/perception/asr_sdm_underwater_video_enhancement/scripts/: play_video_as_ros_topic.py
src/asr_sdm_universe/perception/asr_sdm_underwater_video_enhancement/src/: asr_sdm_underwater_video_enhancement.cpp
src/asr_sdm_universe/perception/asr_sdm_video_enhancement/: CMakeLists.txt  README.md  package.xml
src/asr_sdm_universe/perception/asr_sdm_video_enhancement/scripts/: annotate_cv1045_demo  convert_mp4_to_mcap  play_video_as_ros_topic.py
src/asr_sdm_universe/perception/asr_sdm_video_enhancement/src/: asr_sdm_video_enhancement.cpp  asr_sdm_video_enhancement_eval.cpp  asr_sdm_video_enhancement_export.cpp  asr_sdm_video_file_publisher.cpp  enhancement_processor.cpp  mp4_to_mcap.py
src/asr_sdm_universe/perception/asr_sdm_video_enhancement_ml/: CMakeLists.txt  README.md
src/asr_sdm_universe/perception/asr_sdm_video_enhancement_ml/src/: asr_sdm_video_enhancement_ml_node.cpp
src/asr_sdm_universe/robot/asr_sdm_hardware/: CMakeLists.txt  package.xml
src/asr_sdm_universe/robot/asr_sdm_teleop/: CMakeLists.txt  package.xml
(+411 files in other folders)
