<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asr_sdm_geometric_vision</name>
  <version>0.0.0</version>
  <description>Geometric vision library for pose estimation and RANSAC-based algorithms</description>
  <maintainer email="micheal.wang@hotmail.com">Xiaoyu0601-Wang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <exec_depend>eigen</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
