<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fast</name>
  <version>1.0.0</version>
  <description>
    A ROS2 wrapper for the FAST corner detector by Edward Rosten.
    The sourcefiles are from the CVD library: http://www.edwardrosten.com/cvd/
  </description>
  <maintainer email="forster@ifi.uzh.ch">Christian Forster</maintainer>
  <license>LGPL</license>
  <url>http://www.edwardrosten.com/work/fast.html</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
