<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gaussian_process_regression</name>
  <version>0.3.0</version>
  <description>C++ library for Gaussian Process Regression (libgp)</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>LGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
