<?xml version="1.0"?>
<package format="3">
  <name>asr_sdm_image_classifier</name>
  <version>0.0.1</version>
  <description>Image classification node.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建依赖 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>asr_sdm_perception_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <!-- <build_depend>image_transport</build_depend> -->

  <!-- 运行依赖 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>asr_sdm_perception_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <!-- <exec_depend>image_transport</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- 普通节点，不再导出 rclcpp_components 插件 -->
  </export>

</package>
